# Change Log
# All notable changes to this project will be documented in this file.
# This project adheres to [Semantic Versioning](http://semver.org/).
# includes Added / Changed / Fixed

## [0.2.0] UNRELEASED

## [0.1.5] 2021-01-22
### Fixed
- Fixed generated client file's service name

## [0.1.3] 2021-01-13
### Added
- Mount schema to client
### Changed
- Changed client name, simplify it

## [0.1.2] 2021-01-12
### Fixed
- Fixed config's file name to `_config.py`
- Fixed service client import config file path

## [0.1.1] 2021-01-11
### Added
- Added config

## [0.1.0] 2021-01-07
### Added
- Added cli command `bali add {service}`
- Added cli command `bali update {service}`